--- a/plantsuwa/app/views/layouts/ui/_action_tab_favourites_large.html.erb
+++ b/plantsuwa/app/views/layouts/ui/_action_tab_favourites_large.html.erb
@@ -1,5 +1,5 @@
 <% if signed_in? %>
-	<%= link_to favourites_path do %>
+	<%= link_to favourites_path, id: "favourites-button" do %>
 		<div class="action-tab action-tab-100">
 		  <div class="center-wrapper">
 		    <div style="display: inline-block;">
