--- a/plantsuwa/app/views/layouts/ui/_action_tabs_form.html.erb
+++ b/plantsuwa/app/views/layouts/ui/_action_tabs_form.html.erb
@@ -8,12 +8,11 @@
 </div>
 <% end %>
 
-<%= link_to_submit do %>
-<div class="action-tab" style="left: 50%">
+
+<div class="action-tab" style="left: 50%" onclick="$(this).closest('form').submit(); return false;">
   <div class="center-wrapper">
     <div style="display: inline-block;">
       <p><i class="fa fa-check" style="color: #00B800"></i>&nbsp;&nbsp;Done</p>
     </div>
   </div>
 </div>
-<% end %>
