--- a/plantsuwa/app/views/users/show.html.erb
+++ b/plantsuwa/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
 				<i class="fa fa-edit"></i><span class="over-500">&nbsp;&nbsp;Edit</span>
 			<% end %>
 			<% if !@user.admin? %>
-				<%= link_to user_path(@user), method: :delete, data: { confirm: confirmation_message('user') }, class: 'btn-top btn btn-orange button-shrink', style: 'float: right;' do %>
+				<%= link_to user_path(@user), method: :delete, data: { confirm: confirmation_message('user') }, class: 'btn-top btn btn-orange button-shrink', style: 'float: right;', id: "delete-button" do %>
 					<i class="fa fa-trash-o"></i><span class="over-500">&nbsp;&nbsp;Delete</span>
 				<% end %>
 			<% else %>
