--- a/plantsuwa/app/views/welcome/index.html.erb
+++ b/plantsuwa/app/views/welcome/index.html.erb
@@ -1,5 +1,9 @@
 <div class="padding-mobile">
 
+	<script>
+	addToHomescreen();
+	</script>
+	
   <% if flash[:error] %>
     <div class="alert alert-info" style="margin-top: 20px">
         <p><%= flash[:error] %></p>
