--- a/plantsuwa/app/views/current_plants/show.html.erb
+++ b/plantsuwa/app/views/current_plants/show.html.erb
@@ -19,7 +19,7 @@
     
 
     <% if @current_plant.display_photo.exists? %>
-      <%= image_tag @current_plant.display_photo.url(:medium), class: 'display-photo-right' %>
+      <%= image_tag @current_plant.display_photo.url(:medium), class: 'display-photo-right', id:'btn-display' %>
     <% end %>
     <% if not display_name(@current_plant).blank? %>
       <dt>Scientific Name</dt><p><i><%= display_name(@current_plant) %></i></p>
@@ -28,6 +28,9 @@
       <dt>Subspecies</dt><p><%= @current_plant.subspecies %></p>
     <% end %>
 	
+	<% if not @current_plant.lat1.blank? and not @current_plant.lng1.blank? %>
+		<div class="display-photo-right" id="map-canvas" style="width:300px;height:300px;"></div>
+	<% end %>
 	
 	  <% if not @current_plant.family.blank? %>
 		  <dt>Family</dt><p><%= @current_plant.family %></p>
@@ -49,19 +52,10 @@
     <% end %>
 
 
-
-
-            
-
-
-  
-
-
 	  <% if not @current_plant.characteristics.blank? %>
 		  <dt>Characteristics</dt><p><%= nice_format(@current_plant.characteristics) %></p>
 	  <% end %>
 	  
-    	<div class="display-photo-right" id="map-canvas" style="width:300px;height:300px;"></div>
 	  
 	  <% if not @current_plant.identification.blank? %>
 		  <dt>Identification</dt><p><%= nice_format(@current_plant.identification) %></p>
@@ -163,7 +157,7 @@
 
     <% if not @current_plant.location_1.blank? %>
 	    <dt>UWA Location</dt>
-		<p style="margin-bottom: 0px;"><%= @current_plant.location_1 %></p>
+		<p style="margin-bottom: 0px;"><%= @current_plant.location_1 %> (<%= @current_plant.lat1%>, <%= @current_plant.lng1 %>)</p>
 		<% if not @current_plant.location_2.blank? %>
 			<p style="margin-bottom: 0px;"><%= @current_plant.location_2 %></p>
 		<% end %>
@@ -180,6 +174,7 @@
 			<p style="margin-bottom: 0px;"><%= @current_plant.location_6 %></p>
 		<% end %>
     <% end %>
+	<p></p>
 	
 
     <% if not @current_plant.general_info.blank? %>
@@ -270,19 +265,58 @@
 	var geocoder;
 
       function initialize() {
+		  var bounds = new google.maps.LatLngBounds();
+		  var location1 = new google.maps.LatLng(<%= @current_plant.lat1.to_json %> , <%= @current_plant.lng1.to_json %>);
+		  
         var mapOptions = {
-          center: new google.maps.LatLng(-31.9784021, 115.8178379),
-          zoom: 15
+          center: location1,
+          zoom: 15,
+		  mapTypeId: google.maps.MapTypeId.HYBRID	
         };
+		
         map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
 		google.maps.event.trigger(map, 'resize');
 		
+		var marker;
 		
-		addMarker(map, -31.9784021, 115.8178379);
+		<% if not @current_plant.lat1.blank? and not @current_plant.lng1.blank? %>
+		marker = new google.maps.Marker({
+			position: location1,
+			map: map,
+			animation: google.maps.Animation.DROP
+		})
 		
-			
+		marker.setMap(map);
+		bounds.extend(marker.getPosition());
+		<% end %>
+		<% if not @current_plant.lat2.blank? and not @current_plant.lng2.blank? %>
+		marker = new google.maps.Marker({
+			position: new google.maps.LatLng(<%= @current_plant.lat2.to_json %>, <%= @current_plant.lng2.to_json %>),
+			map: map,
+			animation: google.maps.Animation.DROP
+		})
+		
+		marker.setMap(map);
+		bounds.extend(marker.getPosition());
+		<% end %>
+		<% if not @current_plant.lat3.blank? and not @current_plant.lng3.blank? %>
+			addMarker(map, <%= @current_plant.lat3.to_json %>, <%= @current_plant.lng3.to_json %>);
+		<% end %>
+		<% if not @current_plant.lat4.blank? and not @current_plant.lng4.blank? %>
+			addMarker(map, <%= @current_plant.lat4.to_json %>, <%= @current_plant.lng4.to_json %>);
+		<% end %>
+		<% if not @current_plant.lat5.blank? and not @current_plant.lng5.blank? %>
+			addMarker(map, <%= @current_plant.lat5.to_json %>, <%= @current_plant.lng5.to_json %>);
+		<% end %>
+		<% if not @current_plant.lat6.blank? and not @current_plant.lng6.blank? %>
+			addMarker(map, <%= @current_plant.lat6.to_json %>, <%= @current_plant.lng6.to_json %>);
+		<% end %>
+		
+		map.fitBounds(bounds);
+		
 	}
-	  
+	
+ 
       function addMarker(map, lat, lng) {
 		  var latlng = new google.maps.LatLng(lat, lng);
 		  var marker = new google.maps.Marker({
@@ -290,10 +324,12 @@
               title : "Centre",
               position: latlng
 		  });
+		  
+      
           //Bouncy bounce
-          marker.setAnimation(google.maps.Animation.BOUNCE);
-          setTimeout(function() { marker.setAnimation(null); }, 2500);
-          google.maps.event.addListener(marker, 'click', function() { 			infoWindow.open(map, marker);
+          marker.setAnimation(google.maps.Animation.DROP);
+          google.maps.event.addListener(marker, 'click', function() { 
+			  infoWindow.open(map, marker);
           });
 	  }
 	 
@@ -337,6 +373,13 @@
 
 
   $('#btn-photos').on('click', function () {
+    $('.info-body').css({ display: 'none' });
+    $('#tab-photos').css({ display: '' });
+    $('.info-tab').removeClass("info-tab-current");
+    $('#btn-photos').addClass("info-tab-current");
+  });
+  
+  $('#btn-display').on('click', function () {
     $('.info-body').css({ display: 'none' });
     $('#tab-photos').css({ display: '' });
     $('.info-tab').removeClass("info-tab-current");
