--- a/plantsuwa/app/views/current_plants/show.html.erb
+++ b/plantsuwa/app/views/current_plants/show.html.erb
@@ -353,6 +353,9 @@
 	 
       google.maps.event.addDomListener(window, 'load', initialize);
 	  google.maps.event.trigger(map, 'resize');
+	  google.maps.event.addListener(map, 'click', function( event ){
+	    alert( "Latitude: "+event.latLng.lat()+" "+", longitude: "+event.latLng.lng() ); 
+	  });
 </script>
 
 
