--- a/plantsuwa/app/assets/stylesheets/custom_white.css
+++ b/plantsuwa/app/assets/stylesheets/custom_white.css
@@ -110,7 +110,7 @@ a {
 
 }
 
-.info-tab-current, .info-tab-current:hover {
+.info-tab-current, .info-tab-current:hover, .info-tab:active {
 
   background: #268BFF;
 
