--- a/plantsuwa/app/assets/stylesheets/custom_shared.css
+++ b/plantsuwa/app/assets/stylesheets/custom_shared.css
@@ -85,6 +85,10 @@ textarea {
   resize: vertical;
 }
 
+textarea.form-control {
+  height: 160px;
+}
+
 .fieldset-search-form .check_boxes > .controls {
   height: auto;
   overflow: hidden;
@@ -159,11 +163,11 @@ textarea {
   /*  padding-bottom: 5px; */
   /* border: 1px solid #ccc; */
   /* border-radius: 4px; */
-  height: 120px;
-  overflow-y: scroll;
+  height: auto;
   background-color: #222;
   border-radius: 3px;
 }
+
 
 
 
@@ -256,7 +260,7 @@ label.checkbox {
 
 .plant-index-box {
   width: 100%;
-  height: 64px;
+  height: 80px;
   position: relative;
 	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
 	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
@@ -264,8 +268,8 @@ label.checkbox {
 }
 
 .plant-index-box-photo {
-  width: 64px;
-  height: 64px;
+  width: 80px;
+  height: 80px;
 	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
 	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
 	box-sizing: border-box;         /* Opera/IE 8+ */
@@ -275,11 +279,11 @@ label.checkbox {
 
 }
 .plant-index-box-content {
-  height: 44px;
+  height: 60px;
   width: 100%;
   margin-left: 20px;
   margin-right: 20px;
-  margin-top: 8px;
+  margin-top: 16px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -287,17 +291,17 @@ label.checkbox {
 
 .plant-index-box-content-wrapper {
   width: 100%;
-  padding-left: 50px;
-  padding-right: 50px;
+  padding-left: 70px;
+  padding-right: 70px;
 }
 
 .plant-index-box-chevron {
   position: absolute;
   right: 0;
   top: 0;
-  height: 64px;
+  height: 80px;
   width: 44px;
-  padding-top: 18px;
+  padding-top: 26px;
   padding-left: 12px;
   font-size: large;
 }
@@ -445,6 +449,10 @@ label.checkbox {
   max-height: 50%;
 }
 
+#display-photo-main:hover {
+  cursor: pointer;
+}
+
 .colour-circle {
   float: left;
   margin-top: 2px;
@@ -489,10 +497,84 @@ tr:nth-child(odd) td:last-child {
 	top: 50px;
 	height: 30px;
 	z-index: 1002;
+  padding-left: 0;
+  padding-top: 4px;
+}
+
+.index-banner ul {
+  padding-left: 0;
+}
+
+.index-banner li {
+  padding-left: 10px;
+  display: inline-block;
+  list-style: none;
+}
+
+.grid-photo-container {
+  display: inline-block;
+  width: 10%;
+  height: auto;
+  margin-right: -4px;
+  position: relative;
+}
+
+.grid-photo-container:hover .grid-photo-container-text {
+  background: rgba(0, 0, 0, 0.6);
+  color: rgba(255, 255, 255, 1);
+}
+
+.grid-photo-container-text {
+  background-blend-mode: multiply;
+  background: rgba(0, 0, 0, 0);
+  color: rgba(255, 255, 255, 0);
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1001;
+  text-align: center;
+  font-size: 1em;
+  -webkit-transition: background 0.2s linear;
+  -moz-transition: background 0.2s linear;
+  -ms-transition: background 0.2s linear;
+  -o-transition: background 0.2s linear;
+  transition: background 0.2s linear;
+
+  -webkit-transition: color 0.2s linear;
+  -moz-transition: color 0.2s linear;
+  -ms-transition: color 0.2s linear;
+  -o-transition: color 0.2s linear;
+  transition: color 0.2s linear;
 }
 
 
 
+@media(max-width: 800px) {
+  .grid-photo-container {
+    width: 12.5%;
+  }
+}
+
+@media(max-width: 600px) {
+  .grid-photo-container {
+    width: 16.6666667%;
+  }
+}
+
+@media(max-width: 500px) {
+  .grid-photo-container {
+    width: 20%;
+  }
+}
+
+@media(max-width: 400px) {
+  .grid-photo-container {
+    min-width: 60px;
+    min-height: 60px;
+    width: 25%;
+  }
+}
 
 
 .favourite-form {
