--- a/plantsuwa/app/views/current_plants/show.html.erb
+++ b/plantsuwa/app/views/current_plants/show.html.erb
@@ -19,7 +19,7 @@
     
 
     <% if @current_plant.display_photo.exists? %>
-      <%= image_tag @current_plant.display_photo.url(:medium), class: 'display-photo-right', style: "max-width: 350px" %>
+      <%= image_tag @current_plant.display_photo.url(:medium), id: 'display-photo-main', class: 'display-photo-right', style: "max-width: 350px" %>
     <% end %>
     <% if not display_name(@current_plant).blank? %>
       <dt>Scientific Name</dt><p><i><%= display_name(@current_plant) %></i></p>
@@ -344,6 +344,12 @@
     $('#btn-photos').addClass("info-tab-current");
   });  
 
+  $('#display-photo-main').on('click', function () {
+    $('.info-body').css({ display: 'none' });
+    $('#tab-photos').css({ display: '' });
+    $('.info-tab').removeClass("info-tab-current");
+    $('#btn-photos').addClass("info-tab-current");
+  }); 
 
 
   // Slideshow
