trying to get keyword search working
also updated the contact page

--- a/plantsuwa/app/views/welcome/contact.html.erb
+++ b/plantsuwa/app/views/welcome/contact.html.erb
@@ -11,8 +11,8 @@
   <div class="padding-mobile">
   <div class="row">
     <div class="col-md-6">
-      <h2 class="contact-us-heading"> Who are we? </h2>
-      <p> We're a bunch of UWA Computer Science students making this app for our CITS3200 Project. </p>
+      <h2 class="contact-us-heading feedback-welcome-heading"> Who are we? </h2>
+      <p> We're a bunch of UWA Computer Science students making this app for our CITS3200 Project in Semester 2, 2014. </p>
       <p> Alphabetically, we are:  </p>
       <ul>
         <li> Jason Chao - 21397806</li>
@@ -27,8 +27,8 @@
     <div class="col-md-6">
 
 
-      <h2 class="contact-us-heading"> How can you contact us? </h2>
-      <p> You can email any or all of us, at [our-student-number]@student.uwa.edu.au </p>
+      <h2 class="contact-us-heading feedback-welcome-heading"> How can you contact us? </h2>
+      <p> You can email any or all of us, at [our-student-number]@student.uwa.edu.au, or by <a href="mailto:20938989@student.uwa.edu.au;21397806@student.uwa.edu.au;21334201@student.uwa.edu.au;20947715@student.uwa.edu.au;20505774@student.uwa.edu.au;20848476@student.uwa.edu.au;?Subject=UWA%20Plants%20Database%20query"> clicking here </a></p>
       <p> Or, if you like you can email our client, Associate Professor Catharina Sack, at <a href="mailto:tinka.sack@uwa.edu.au" target="_blank">tinka.sack@uwa.edu.au</a>.</p>
       
 
@@ -43,17 +43,21 @@
     <div class="feedback-welcome">
       <p> Big or small, good or bad. </p> 
       <p> If you want more features, or if you think we could be doing something better - we'd love to hear your ideas! </p>
-      <p> Please don't hesitate to email :) </p>
+      <p> Please don't hesitate to <a href="mailto:20938989@student.uwa.edu.au;21397806@student.uwa.edu.au;21334201@student.uwa.edu.au;20947715@student.uwa.edu.au;20505774@student.uwa.edu.au;20848476@student.uwa.edu.au;?Subject=UWA%20Plants%20Database%20query">email</a> :) </p>
     </div>
     <hr/>  
   </div>
 
 <div class="padding-mobile">
+	<h2 class="contact-us-heading feedback-welcome-heading"> Acknowledgements </h2>
   <ul class="sources-list">
     <li>The site was built using <a href="http://rubyonrails.org/" target="_blank">Ruby on Rails</a></li>
     <li>Styled using <a href="http://getbootstrap.com/" target="_blank">Twitter Bootstrap</a></li>
     <li>Uses the <a href="http://www.appelsiini.net/projects/lazyload" target="_blank">Lazy Load jQuery plugin by Mika Tuupola</a></li>
     <li>All icons are from <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">Font Awesome</a></li>
+	<li>Locations displayed with <a href="https://www.google.com.au/maps/place/The+University+of+Western+Australia" target="_blank">Google Maps</a></li>
+	<li>Keyword search uses wvanbergen's <a href="https://github.com/wvanbergen/scoped_search" target="_blank">scoped_search</a> gem</li>
+	<li>Other helpful tools included <a href="https://github.com/cubiq/add-to-homescreen" target="_blank">add-to-homescreen</a>, <a href="https://github.com/thoughtbot/paperclip" target="_blank">paperclip</a>, and <a href="https://github.com/plataformatec/simple_form" target="_blank">simple_form</a>.</li>
   </ul>
 </div>
 
